syntax = "proto3";

package com.payroll.payslip.proto;

option java_multiple_files = true;
option java_package = "com.payroll.payslip.proto";

message Organization {
  int32 organization_id = 1;
  string organizationKod = 2;
  string organizationName = 3;
  string adress = 4;
}

message GetOrganizationRequest {
  int32 organization_id = 1;
}

message GetOrganizationResponse {
  Organization organization = 1;
}

service OrganizationDataService {
  rpc GetOrganizationById(GetOrganizationRequest) returns (GetOrganizationResponse);
}